devops/kubernetes/admin-panel-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-panel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-panel
  template:
    metadata:
      labels:
        app: admin-panel
    spec:
      containers:
      - name: admin-panel
        image: armanfit/admin-panel:latest
        ports:
        - containerPort: 8080

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
