devops/kubernetes/mobile-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobile
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mobile
  template:
    metadata:
      labels:
        app: mobile
    spec:
      containers:
      - name: mobile
        image: armanfit/mobile:latest
        ports:
        - containerPort: 4000

          livenessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
