devops/kubernetes/mobile-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: mobile-service
spec:
  selector:
    app: mobile
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
  type: ClusterIP
